--- a/style.css
+++ b/style.css
@@ -39,10 +39,15 @@ body {
 
 .hidden {
   display: none;
+  transition: all 300ms ease-in;
+}
+.container {
+  position: relative;
+  height: 100vh;
 }
 
 /* ================================================= */
-nav {
+header {
   background-color: var(--bg-dark);
   color: var(--font-light);
   height: 56px;
@@ -50,12 +55,15 @@ nav {
   align-items: center;
   padding: 12px 16px;
 }
-.inner-navbar {
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100%;
   width: 100%;
+}
+.m-logo {
+  display: none;
 }
 .search {
   border: 1px solid var(--stroke-s-200);
@@ -83,11 +91,12 @@ nav {
   color: var(--font-light);
   transition: all 200ms ease-in;
 }
-.notify {
+.menu-wrapper {
   /* border: 1px solid #FFF; */
   /* width: 230px; */
   display: flex;
   justify-content: flex-end;
+  gap: 8px;
   position: relative;
 }
 
@@ -108,19 +117,23 @@ nav {
   transition: all 200ms ease-in;
 }
 
-.profile {
+.profile-menu-trigger {
   height: 32px;
   width: 142px;
   display: flex;
   align-items: center;
-  margin-left: 8px;
+  padding-inline: 0;
+  padding-block: 0;
   padding: 2px 2px 2px 8px;
   border: none;
   background: none;
   outline: none;
+  gap: 8px;
   transition: all 200ms ease-in;
 }
 .profile-name {
+  width: 96px;
+  height: 9px;
   font-size: 12px;
   font-weight: 500;
   color: var(--font-light);
@@ -136,11 +149,11 @@ nav {
   font-weight: 500;
 }
 .notification:hover,
-.profile:hover {
+.profile-menu-trigger:hover {
   background-color: var(--font-mid);
 }
 .notification:focus,
-.profile:focus {
+.profile-menu-trigger:focus {
   background: var(--grey-g-50);
   outline: 2px solid #005bd3;
   outline-offset: 1px;
@@ -148,23 +161,163 @@ nav {
 .badge-box {
   background-color: var(--grey-g-200);
   border-radius: 8px;
+  
 }
-.notify-dropdown,
+.alert-dropdown,
 .profile-menu {
-  min-height: 100px;
-  width: 350px;
-  background-color: #fff;
+  display: flex;
+  width: 320px;
+  height: 382px;
+  padding: 6px 0px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+  border-radius: 14px;
+  border: 1px solid var(--stroke-s-50);
+  background: var(--white);
+
+  /* Drop Shadow */
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+  /* ------------- */
+
   color: var(--font-mid);
-  border: 1px solid var(--font-light);
   position: absolute;
-  top: 3.22rem;
+  top: 50px;
   right: 0;
-  border-radius: 10px;
+  display: none;
+}
+.alert-dropdown {
+  height: 118px;
+  padding: 14px;
+  
+}
+.alert-panel-heading {
+  height: 20px;
+  display: flex;
+justify-content: space-between;
+align-items: center;
+align-self: stretch;
+
+}
+.alert-icons {
+  height: 20px;
+  width: 50px;
+  display: flex;
+  gap: 10px;
+}
+.alert-icon-blue {
+  width: 20px;
+height: 20px;
+  border: 0.75px solid  var(--states-focused);
+  border-radius: 5px;
+}
+.alert-panel-body {
+  margin-top: 16px;
+  display: flex;
+  align-items: center;
+  height: 50px;
+  padding: 10px;
+  background: var(--states-hover);
+}
+.alert-panel-body p {
+  color: var(--font-mid);
+
+font-size: 11px;
+font-style: normal;
+font-weight: 600;
+line-height: 140%; /* 18.2px */
+}
+.profile-menu-heading {
+  height: 72px;
+  display: flex;
+  padding: 0px 6px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
+  border-bottom: 0.75px solid #e1e1e1;
+}
+
+.profile-tag {
+  height: 36px;
+  display: flex;
+  padding: 4px 12px 4px 8px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 8px;
+  background: var(--states-hover);
+}
+.pro-tag-box {
+  width: 141px;
+  height: 28px;
+  display: flex;
+align-items: center;
+gap: 8px;
+}
+.pro-name {
+  font-size: 13px;
+  font-weight: 600;
+}
+.store-box {
+  height: 32px;
+  display: flex;
+  padding: 6px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  border-radius: 8px;
+}
+.profile-menu-body-1 {
+  border-bottom: 0.75px solid #e1e1e1;
+  height: 176px;
+  display: flex;
+  padding: 4px 6px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
+}
+.profile-menu-body-2 {
+  display: flex;
+  padding: 0px 6px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
+}
+
+.profile-menu-item {
+  height: 30px;
+  padding: 6px;
+}
+.profile-menu-item button {
+  outline: none;
+  border: none;
+  background: none;
+  color: var(--font-dark);
+
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 18.2px */
+}
+.item2 {
+  height: 50px;
+  padding: 8px;
+}
+.item2-email {
+  font-size: 12px;
+  color: var(--grey-g-100);
+}
+/* ====================active menu */
+.menu-active {
+  display: block;
 }
 
 /* ===========================MAIN */
 .main {
-  height: 178px;
+  /* height: 178px; */
   max-width: 800px;
   /* border: 1px solid black; */
   margin: 0 auto;
@@ -181,14 +334,23 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 12px 8px 12px 16px;
+  transition: all 200ms ease-in;
+
 }
-.trial-text {
-  width: 369px;
+.trial-text-box {
   height: 18px;
   font-size: 13px;
   font-weight: 500;
   color: var(--font-light);
 }
+.trial-text {
+  max-width: 369px;
+  font-size: 13px;
+  font-weight: 500;
+  color: var(--font-light);
+  line-height: 18.2px;
+}
+
 .trial-btns {
   height: 32px;
   width: 139px;
@@ -230,10 +392,32 @@ nav {
 .trial-btns a {
   text-decoration: none;
 }
+.l-trial-close, .m-trial-close {
+  outline: none;
+  border: none;
+  background: none;
+  height: 28px;
+  width: 28px;
+  transition: all 200ms ease-in;
+}
+.m-trial-close {
+  display: none;
+}
+.l-trial-close:hover {
+background: #2a2a2a;
+border-radius: 6px;
+}
+.l-trial-close:focus {
+  background: #404040;
+  border-radius: 6px;
+  outline: 2px solid #005BD3;
+  outline-offset: 1px;
+}
 
 /* ==================== ACCORDION STYLES */
 .accordion-box {
-  min-height: 106px;
+  /* min-height: 106px; */
+  /* max-height: 449px; */
   background-color: var(--white);
   border: 1px solid var(--stroke-s-50);
   color: var(--font-dark);
@@ -242,6 +426,10 @@ nav {
   font-weight: 400;
   padding: 8px;
   box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  transition: all 200ms ease-in;
 }
 
 .texts-box {
@@ -275,11 +463,29 @@ nav {
 }
 .step-up,
 .step-down {
-  /* height: 24px; */
-  /* width: 24px; */
+  height: 24px;
+  width: 24px;
   background: none;
   outline: none;
   border: none;
+  transition: all 200ms ease-in;
+}
+.button2 {
+  width: 134px;
+  display: flex;
+  padding: 6px 12px;
+  align-items: center;
+  gap: 8px;
+  border: none;
+  border-radius: 6px;
+  font-size: 11px;
+  font-weight: 600;
+  color: var(--font-dark-2);
+  transition: all 200ms ease-in;
+}
+.button2:hover {
+  border-radius: 6px;
+  background: var(--white);
 }
 .step-up:hover,
 .step-down:hover {
@@ -291,23 +497,35 @@ nav {
   border-radius: 6px;
   background: var(--states-pressed);
 }
-.step-up:focus-within,
-.step-down:focus-within {
+.step-up:focus,
+.step-down:focus,
+.button2:focus-within {
   border-radius: 6px;
   border: 2px solid var(--states-focused);
 }
 
 .progress-box {
+  height: 16px;
   display: flex;
   align-items: center;
   gap: 8px;
 }
-/* .progress-range {
-} */
+.progress-text {
+  font-size: 12px;
+  font-weight: 400;
+}
 
 /* ----------------------------ACCORDION EACH BOXES */
+/* .x-text {
+  display: none;
+
+}
+.x-active {
+  display: block;
+} */
+
 .accordion-accordion {
-  margin-top: 16px;
+  /* margin-top: 16px; */
   display: flex;
   flex-direction: column;
   gap: 2px;
@@ -315,7 +533,16 @@ nav {
 }
 
 .accordion-each-box {
-  height: 141px;
+  min-height: 38px;
+  width: 100%;
+  display: flex;
+  padding: 8px;
+  align-items: center;
+  /* gap: 120px; */
+  /* align-self: stretch; */
+}
+.active-each-box {
+  /* height: 141px; */
   width: 100%;
   padding: 8px 8px 12px 8px;
   /* border: 1px solid black; */
@@ -334,28 +561,94 @@ nav {
   align-items: flex-start;
   gap: 8px;
 }
+@keyframes zoom-in-spin {
+  from {
+    transform: scale(0) rotate(270deg);
+    opacity: 0;
+  }
+
+  to {
+    transform: scale(1) rotate(360deg);
+    opacity: 1;
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+.load-spinner {
+  animation-duration: 1000ms;
+  animation-name: spin;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
 .accordion-check {
   height: 100%;
+ }
+ .check-btn {
+  height: 24px;
+  width: 24px;
+  background: none;
+  outline: none;
+  border: none;
+ } 
+.check-btn:hover .not-completed-icon circle {
+stroke-dasharray: 0 0;
 }
+.check-btn:focus .not-completed-icon circle {
+  fill: #d9d9d9;
+  stroke-dasharray: 0 0;
+
+  outline: 1px solid #005BD3;
+  outline-offset: 2px;
+  }
+  .complete-check {
+    /* background: var(--bg-dark); */
+    animation-duration: 300ms;
+  animation-name: zoom-in-spin;
+  animation-timing-function: linear;
+  }
 .accordion-both-hp {
-  width: 483.85541px;
+  height: 100%;
+  max-width: 483.85541px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 16px;
   padding: 2px 0;
 }
-.accordion-header {
+.panel-trigger {
+  outline: none;
+  border: none;
+  background: none;
   font-size: 13px;
   font-weight: 600;
   line-height: 18.2px;
   color: var(--font-dark);
 }
+
+
 .accordion-panel {
+  /* max-height: 0; */
+  overflow: hidden;
+  max-height: 0;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
+  /* margin-top: 16px; */
+  transition: max-height 200ms ease-in-out;
 }
+.hide-panel {
+  max-height: 0px;
+  margin-top: 0px;
+  overflow: hidden;
+  transition: all 200ms ease-in;
+}
+
 .accordion-panel p {
   font-size: 13px;
   font-weight: 500;
@@ -373,18 +666,7 @@ nav {
   display: flex;
   gap: 16px;
 }
-.button2 {
-  width: 124px;
-  display: flex;
-  padding: 6px 12px;
-  align-items: center;
-  gap: 8px;
-  border: none;
-  border-radius: 6px;
-  font-size: 11px;
-  font-weight: 600;
-  color: var(--font-dark-2);
-}
+
 .button {
   width: 127px;
   height: 28px;
@@ -393,6 +675,7 @@ nav {
   align-items: center;
   border-radius: 6px;
   padding: 6px 12px;
+  margin-left: 4px;
   font-size: 11px;
   font-weight: 600;
   color: var(--font-light-2);
@@ -403,6 +686,7 @@ nav {
   box-shadow: 0px 0px 0px 1.5px #333, 0px 1px 0px 1.5px #333,
     0px 2px 0px 0px #000;
   transition: all 200ms ease-in;
+
 }
 .button:hover {
   background: #2a2a2a;
@@ -428,4 +712,142 @@ nav {
 
 .check-bg {
   background-color: var(--bg-mid);
+}
+
+/* ------===================footer */
+.m-footer {
+  display: none;
+}
+
+/* ======================================= */
+/* MEDIA QUERIES */
+/* ========================================= */
+@media screen and (max-width: 767px) {
+  .l-logo {
+    display: none;
+  }
+  .m-logo {
+    display: block;
+  }
+  .search {
+    max-width: 230px;
+  }
+  .notification {
+    background: none;
+  }
+  .profile-menu-trigger {
+    width: 28px;
+    padding: 0;
+    background: none;
+  }
+  .profile-name {
+    display: none;
+  }
+  .main {
+    margin-top: 28px;
+  }
+  .trial-box {
+    height: 104px;
+    border-radius: 0;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+  }
+  .trial-text-box {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .l-trial-close {
+    display: none;
+  }
+  .m-trial-close {
+    display: block;
+  }
+  .trial-btns {
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .accordion-box {
+    border-radius: 0;
+  }
+  .texts-box {
+    height: 108px;
+  }
+  .texts-text-heading-box {
+    height: 60px;
+    /* gap: 24px; */
+  }
+  .texts-text-heading-box p {
+    height: 36px;
+  }
+  .accordion-right-icon {
+    display: none;
+  }
+  .m-footer {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: 128px;
+    width: 100%;
+    background: #f7f7f7;
+    box-shadow: 0px -0.4px 0px 0px #c1c1c1;
+  }
+  .admin-link-box {
+    max-width: 321px;
+    height: 42px;
+    margin: 0 auto;
+    margin-top: 8px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.13);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 9px 9px 9px 12px;
+  }
+  .admin-admin-link {
+    height: 22px;
+    width: 161px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+  }
+  .admin-link {
+    color: #202124;
+    text-align: center;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  .m-navbar-bottom {
+    display: flex;
+    height: 24px;
+    max-width: 340px;
+    margin: 0 auto;
+    margin-top: 12px;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .dash-box {
+    height: 34px;
+    width: 100%;
+    display: flex;
+    padding: 21px 128px 8px 128px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+  }
+  .dash-dash {
+    height: 5px;
+    width: 134px;
+    background: #000;
+    border-radius: 100px;
+  }
+
+  /* =-------- */
 }
